--- a/VueueBot/VueueBot.csproj
+++ b/VueueBot/VueueBot.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Discord.Addons.Hosting" Version="6.1.0" />
     <PackageReference Include="Discord.Net" Version="3.16.0" />
     <PackageReference Include="Discord.Net.WebSocket" Version="3.16.0" />
+    <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.25" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
